--- a/README.hbs
+++ b/README.hbs
@@ -1,8 +1,8 @@
-[![view on npm](http://img.shields.io/npm/v/uttori-analytics-provider-json-file.svg)](https://www.npmjs.org/package/uttori-analytics-provider-json-file)
-[![npm module downloads](http://img.shields.io/npm/dt/uttori-analytics-provider-json-file.svg)](https://www.npmjs.org/package/uttori-analytics-provider-json-file)
-[![Build Status](https://travis-ci.org/uttori/uttori-analytics-provider-json-file.svg?branch=master)](https://travis-ci.org/uttori/uttori-analytics-provider-json-file)
-[![Dependency Status](https://david-dm.org/uttori/uttori-analytics-provider-json-file.svg)](https://david-dm.org/uttori/uttori-analytics-provider-json-file)
-[![Coverage Status](https://coveralls.io/repos/uttori/uttori-analytics-provider-json-file/badge.svg?branch=master)](https://coveralls.io/r/uttori/uttori-analytics-provider-json-file?branch=master)
+[![view on npm](http://img.shields.io/npm/v/uttori-plugin-analytics-json-file.svg)](https://www.npmjs.org/package/uttori-plugin-analytics-json-file)
+[![npm module downloads](http://img.shields.io/npm/dt/uttori-plugin-analytics-json-file.svg)](https://www.npmjs.org/package/uttori-plugin-analytics-json-file)
+[![Build Status](https://travis-ci.org/uttori/uttori-plugin-analytics-json-file.svg?branch=master)](https://travis-ci.org/uttori/uttori-plugin-analytics-json-file)
+[![Dependency Status](https://david-dm.org/uttori/uttori-plugin-analytics-json-file.svg)](https://david-dm.org/uttori/uttori-plugin-analytics-json-file)
+[![Coverage Status](https://coveralls.io/repos/uttori/uttori-plugin-analytics-json-file/badge.svg?branch=master)](https://coveralls.io/r/uttori/uttori-plugin-analytics-json-file?branch=master)
 
 # Uttori Analytics Provider - JSON File
 
@@ -11,13 +11,20 @@ Uttori analytics provider using JSON files on disk.
 ## Install
 
 ```bash
-npm install --save uttori-analytics-provider-json-file
+npm install --save uttori-plugin-analytics-json-file
 ```
 
-# Config
+## Config
 
 ```js
 {
+  // Registration Events
+  events: {
+    getPopularDocuments: ['getPopularDocuments'],
+    updateDocument: ['updateDocument'],
+    validateConfig: ['validate-config'],
+  },
+  // Directory files will be uploaded to.
   directory: '',
   name: 'visits',
   extension: 'json',
@@ -26,7 +33,7 @@ npm install --save uttori-analytics-provider-json-file
 
 * * *
 
-# API Reference
+## API Reference
 
 {{>main}}
 
